<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/fullNameIn"
                android:layout_width="274dp"
                android:layout_height="40dp"
                android:layout_marginTop="48dp"
                android:backgroundTint="#8E24AA"
                android:ems="10"
                android:foregroundTint="#D81B60"
                android:hint="@string/fullNameIn"
                android:inputType="textPersonName"
                android:textColor="#0F0202"
                android:textColorHint="#9C27B0"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/oldAcc"
                app:layout_constraintTop_toBottomOf="@+id/oldAcc" />

            <EditText
                android:id="@+id/emailIn"
                android:layout_width="274dp"
                android:layout_height="41dp"
                android:backgroundTint="#8E24AA"
                android:ems="10"
                android:hint="@string/emailIn"
                android:inputType="textEmailAddress"
                android:textColor="#0F0202"
                android:textColorHint="#9C27B0"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/fullNameIn"
                app:layout_constraintTop_toBottomOf="@+id/fullNameIn" />

            <EditText
                android:id="@+id/passwordIn"
                android:layout_width="247dp"
                android:layout_height="45dp"
                android:backgroundTint="#8E24AA"
                android:ems="10"
                android:hint="@string/passwordIn"
                android:inputType="textPassword"
                android:textColor="#0F0202"
                android:textColorHint="#9C27B0"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/emailIn"
                app:layout_constraintTop_toBottomOf="@+id/emailIn" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="274dp"
                android:layout_height="0dp"
                android:layout_marginTop="28dp"
                android:background="#8BC34A"
                android:backgroundTint="#65D81B60"
                android:buttonTint="#00BCD4"
                android:text="@string/check"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.277"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <EditText
                android:id="@+id/conPasswordIn"
                android:layout_width="362dp"
                android:layout_height="42dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#8E24AA"
                android:ems="10"
                android:hint="@string/conPassIn"
                android:inputType="textPassword"
                android:textColor="#0F0202"
                android:textColorHint="#9C27B0"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/passwordIn"
                app:layout_constraintTop_toBottomOf="@+id/passwordIn" />

            <Button
                android:id="@+id/signUp"
                android:layout_width="107dp"
                android:layout_height="39dp"
                android:layout_marginStart="272dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/color5"
                android:text="@string/sUp"
                app:layout_constraintEnd_toEndOf="@+id/checkBox"
                app:layout_constraintHorizontal_bias="0.402"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <Button
                android:id="@+id/signIn"
                android:layout_width="98dp"
                android:layout_height="36dp"
                android:backgroundTint="@color/color5"
                android:foregroundTint="#5E35B1"
                android:text="@string/sIn"
                app:layout_constraintStart_toEndOf="@+id/oldAcc"
                app:layout_constraintTop_toBottomOf="@+id/oldAcc" />

            <TextView
                android:id="@+id/oldAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/color3"
                android:text="@string/haveAcc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.184"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <CheckBox
                android:id="@+id/passCheck"
                android:layout_width="84dp"
                android:layout_height="23dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:background="@color/color3"
                android:text="@string/view"
                app:layout_constraintBottom_toTopOf="@+id/passwordIn"
                app:layout_constraintStart_toEndOf="@+id/passwordIn"
                app:layout_constraintTop_toBottomOf="@+id/emailIn"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/button"
                android:layout_width="205dp"
                android:layout_height="22dp"
                android:layout_marginTop="8dp"
                android:background="@color/color1"
                android:text="@string/addPic"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:background="@color/color5"
                android:text="@string/Pic"
                app:layout_constraintStart_toStartOf="@+id/conPasswordIn"
                app:layout_constraintTop_toBottomOf="@+id/conPasswordIn" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="72dp"
                android:layout_height="27dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:background="@color/colorPrimary"
                android:text="@string/male"
                app:layout_constraintStart_toStartOf="@+id/conPasswordIn"
                app:layout_constraintTop_toBottomOf="@+id/conPasswordIn" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="96dp"
                android:layout_height="27dp"
                android:layout_marginTop="36dp"
                android:background="@color/color1"
                android:text="@string/female"
                app:layout_constraintStart_toEndOf="@+id/checkBox2"
                app:layout_constraintTop_toBottomOf="@+id/conPasswordIn" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="87dp"
                android:layout_height="27dp"
                android:layout_marginTop="36dp"
                android:background="@color/color6"
                android:text="@string/other"
                app:layout_constraintStart_toEndOf="@+id/checkBox3"
                app:layout_constraintTop_toBottomOf="@+id/conPasswordIn" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@color/color3"
                android:text="@string/gender"
                app:layout_constraintStart_toStartOf="@+id/conPasswordIn"
                app:layout_constraintTop_toBottomOf="@+id/conPasswordIn" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="32dp"
                android:background="#F0D616"
                android:text="@string/Intro"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.083"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>