<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".Forgot_Password">

    <TextView
        android:id="@+id/f_forgot"
        android:layout_width="139dp"
        android:layout_height="24dp"
        android:layout_marginTop="40dp"
        android:background="#E53935"
        android:backgroundTint="#AB82BD"
        android:text="@string/forPass"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgetPassDetails"
        android:layout_width="327dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:background="#039BE5"
        android:backgroundTint="#8ECA91"
        android:text="@string/forgotPassDetails"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/f_forgot"
        app:layout_constraintTop_toBottomOf="@+id/f_forgot" />

    <TextView
        android:id="@+id/_email"
        android:layout_width="126dp"
        android:layout_height="39dp"
        android:layout_marginTop="40dp"
        android:background="#FDD835"
        android:backgroundTint="#C2A882"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/forgetPassDetails"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/forgetPassDetails"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassDetails" />

    <EditText
        android:id="@+id/_emailIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#D81B60"
        android:ems="10"
        android:hint="@string/emailIn"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/_email"
        app:layout_constraintTop_toBottomOf="@+id/_email" />

    <Button
        android:id="@+id/resetPass"
        android:layout_width="119dp"
        android:layout_height="41dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#65D81B60"
        android:text="@string/sendCode"
        app:layout_constraintStart_toStartOf="@+id/_emailIn"
        app:layout_constraintTop_toBottomOf="@+id/_emailIn" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="48dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/goToLogin"
        app:layout_constraintEnd_toStartOf="@+id/resetPass"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/_emailIn"
        app:layout_constraintTop_toBottomOf="@+id/_emailIn" />


</androidx.constraintlayout.widget.ConstraintLayout>