<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".Forgot_Password">

    <TextView
        android:id="@+id/f_forgot"
        android:layout_width="228dp"
        android:layout_height="53dp"
        android:layout_marginTop="52dp"
        android:background="#E53935"
        android:backgroundTint="#AB82BD"
        android:text="@string/reset"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgetPassDetails"
        android:layout_width="341dp"
        android:layout_height="39dp"
        android:layout_marginTop="44dp"
        android:background="#039BE5"
        android:backgroundTint="#8ECA91"
        android:text="@string/resetPass"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/f_forgot"
        app:layout_constraintTop_toBottomOf="@+id/f_forgot" />

    <EditText
        android:id="@+id/_emailIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#D81B60"
        android:ems="10"
        android:hint="@string/codeIn"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/forgetPassDetails"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassDetails" />

    <Button
        android:id="@+id/resetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:backgroundTint="#65D81B60"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="@+id/_emailIn"
        app:layout_constraintTop_toBottomOf="@+id/_emailIn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="302dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@color/color2"
        android:text="@string/resetPassInf"
        app:layout_constraintEnd_toEndOf="@+id/resetPass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/_emailIn"
        app:layout_constraintTop_toBottomOf="@+id/resetPass" />

    <Button
        android:id="@+id/button3"
        android:layout_width="154dp"
        android:layout_height="38dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/sendCodeA"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>