<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newprofile"
    tools:context=".OthersProfile">



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/prof1"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/duaa"
        app:civ_border_width="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/cam1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="-55dp"
        android:src="@drawable/cam_icon"
        app:civ_border_color="#cc3737"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        />


    <TextView
        android:id="@+id/name"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="50dp"
        android:text="@string/duaa"
        android:textColor="#0F0E0E"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/address"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginLeft="14dp"
        android:text="@string/duaaEmail"
        android:textColor="#030303"
        android:textSize="18sp"
        android:textStyle="bold|italic" />
<TextView
    android:layout_width="250dp"
    android:layout_height="30dp"
    android:text="@string/overall"
    android:layout_marginLeft="14dp"
    android:layout_marginTop="30dp"
    android:textColor="#030303"
    android:textStyle="bold"
    />
        <TextView
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:text="@string/perc"
            android:layout_marginLeft="14dp"
            android:textColor="#030303"
            />
        <TextView
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:text="@string/invisible"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="30dp"
            android:textColor="#030303"
            />
        <TextView
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:text="@string/notnear"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="0dp"
            android:textColor="#030303"

            />

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>